--- a/index.html
+++ b/index.html
@@ -51,75 +51,43 @@
 
 <!-- Monster Loot Section -->
 <h2>Monster Loot</h2>
-<button onclick="generateMonsterLoot('Bokoblin')">Bokoblin</button>
-<button onclick="generateMonsterLoot('SilverBokoblin')">SilverBokoblin</button>
-<button onclick="generateMonsterLoot('GoldenBokoblin')">GoldenBokoblin</button>
-<button onclick="generateMonsterLoot('BossSilverBokoblin')">BossSilverBokoblin</button>
+<button onclick="generateMonsterLoot('Normal Bokoblin')">Normal Bokoblin</button>
+<button onclick="generateMonsterLoot('Silver Bokoblin')">Silver Bokoblin</button>
+<button onclick="generateMonsterLoot('Golden Bokoblin')">Golden Bokoblin</button>
+<button onclick="generateMonsterLoot('Boss Silver Bokoblin')">Boss Silver Bokoblin</button>
+<button onclick="generateMonsterLoot('Chuchu')">Chuchu</button>
+<button onclick="generateMonsterLoot('Boss Chuchu')">Boss Chuchu</button>
+<button onclick="generateMonsterLoot('Monke')">Monke</button>
+<button onclick="generateMonsterLoot('Le Oat Brothers')">Le Oat Brothers</button>
 <br><br>
 <input type="checkbox" id="cursedMedal" onclick="toggleCursedMode()"> Cursed Medal Mode
 <br><br>
 <div id="monsterLootResult"></div>
 
 <script>
-// Chest loot tables for different areas
+// Chest loot tables for different areas (selects one item at random)
 const chestLootTables = {
     "Clock Town Chest": [
-        "Small Key", "Health Potion", "Gold Coin", "Silver Ring", "Bombs", "Map of Clock Town"
+        { item: "1 Scrap", chance: 0.3 },  // Most common
+        { item: "3 Gold", chance: 0.3 },
+        { item: "4 Gold", chance: 0.25 },  // In-between rarity
+        { item: "Deku Mask", chance: 0.075 },  // Rarest
+        { item: "Couple's Mask", chance: 0.075 }
     ],
     "Termina Field Chest": [
-        "Iron Sword", "Health Potion", "Mystic Gem", "Green Tunic", "Shield", "Bombs"
+        { item: "Bunny Hood", chance: 0.05 },  // Rarest
+        { item: "5 Gold", chance: 0.05 },
+        { item: "10 Rupees", chance: 0.2 },  // Slightly more common
+        { item: "2 Scraps", chance: 0.25 },  // Common
+        { item: "3 Gold", chance: 0.25 },
+        { item: "5 Rupees", chance: 0.25 }
     ],
     "Dungeon Chest": [
         "Master Sword", "Golden Key", "Rare Gem", "Flame Shield", "Health Potion", "Cursed Skull"
     ]
 };
 
-// Monster loot tables (with guaranteed and optional non-guaranteed loot)
-const monsterLootTables = {
-    Bokoblin: {
-        guaranteed: ["1 Gold", "1 Scrap"],
-        cursedLoot: {
-        guaranteed: ["2 Gold", "1 Scrap"],
-        }
-    },
-    SilverBokoblin: {
-        guaranteed: ["3 Gold", "3 Scraps", "1 Bokoblin Horn"],
-        cursedLoot: {
-        guaranteed: ["6 Gold", "3 Scraps", "2 Bokoblin Horn"],
-        }
-    },
-    GoldenBokoblin: {
-        guaranteed: ["15 Gold", "6 Scraps"],
-        nonGuaranteed: [
-            { item: "Health Potion", chance: 0.3 },
-            { item: "Old Key", chance: 0.2 },
-            { item: "Torn Cloak", chance: 0.1 }
-        ],
-        cursedLoot: {
-            guaranteed: ["GoldenBokoblin King’s Crown", "Haunted Flesh"],
-            nonGuaranteed: [
-                { item: "Cursed Bone", chance: 0.4 },
-                { item: "GoldenBokoblin Arm", chance: 0.3 }
-            ]
-        }
-    },
-    BossSilverBokoblin: {
-        guaranteed: ["BossSilverBokoblin Venom", "Small Web"],
-        nonGuaranteed: [
-            { item: "Poisonous Fang", chance: 0.5 },
-            { item: "Silk Cloth", chance: 0.4 }
-        ],
-        cursedLoot: {
-            guaranteed: ["Cursed BossSilverBokoblin Fang", "Demonic Webbing"],
-            nonGuaranteed: [
-                { item: "Poisonous Shard", chance: 0.4 },
-                { item: "Cursed Relic", chance: 0.2 }
-            ]
-        }
-    }
-};
-
-// Function to generate random chest loot
+// Function to generate random chest loot (one item per chest)
 function generateChestLoot(chestName) {
     const lootTable = chestLootTables[chestName];
     const chestLootResult = document.getElementById('chestLootResult');
@@ -130,13 +98,81 @@ function generateChestLoot(chestName) {
         return;
     }
 
-    const randomIndex = Math.floor(Math.random() * lootTable.length);
-    const loot = lootTable[randomIndex];
+    // Select an item based on its chance value
+    const random = Math.random();
+    let cumulativeChance = 0;
+    let selectedItem = "Nothing"; // Default if no item is found
 
-    chestLootResult.innerHTML = `<div class="lootItem">${loot}</div>`;
+    for (const loot of lootTable) {
+        cumulativeChance += loot.chance || 0;
+        if (random < cumulativeChance) {
+            selectedItem = loot.item;
+            break;
+        }
+    }
+
+    chestLootResult.innerHTML = `<div class="lootItem">${selectedItem}</div>`;
 }
 
-// Function to generate monster loot with optional Cursed Medal Mode
+// Monster loot tables (kept unchanged as per requirements)
+const monsterLootTables = {
+    "Normal Bokoblin": {
+        guaranteed: ["1 Gold", "1 Scrap"],
+        cursedLoot: {
+            guaranteed: ["2 Gold", "1 Scrap"]
+        }
+    },
+    "Silver Bokoblin": {
+        guaranteed: ["3 Gold", "3 Scraps", "1 Bokoblin Horn"],
+        cursedLoot: {
+            guaranteed: ["6 Gold", "3 Scraps", "2 Bokoblin Horn"]
+        }
+    },
+    "Golden Bokoblin": {
+        guaranteed: ["15 Gold", "6 Scraps", "1-2 Rare Scraps", "2-3 Bokoblin Horns"],
+        cursedLoot: {
+            guaranteed: ["30 Gold", "6 Scraps", "5 Bokoblin Horns"],
+        }
+    },
+    "Boss Silver Bokoblin": {
+        guaranteed: ["1 Skill Point", "5 Gold", "4 Bokoblin Horns", "5 Scraps", "2-3 Rare Scraps", "1 Large Bokoblin Horn"],
+        cursedLoot: {
+            guaranteed: ["10 Gold", "8 Bokoblin Horns", "2 Large Bokoblin Horns"],
+        }
+    },
+    "Chuchu": {
+        guaranteed: ["1 Rupee"],
+        nonGuaranteed: [
+            { item: "0-1 Chuchu Jelly", chance: 1 }
+        ],
+        cursedLoot: {
+            guaranteed: ["2 Rupees", "2 Chuchu Jelly"],
+        }
+    },
+    "Boss Chuchu": {
+        guaranteed: ["8 Rupees", "3 Scraps", "1 Rare Scrap", "3 Chuchu Jelly"],
+        cursedLoot: {
+            guaranteed: ["16 Rupees", "6 Chuchu Jelly"]
+        }
+    },
+    "Monke": {
+        guaranteed: ["2 Skill Points", "Hookshot", "5 Gold", "10 Scraps"],
+        cursedLoot: {
+            guaranteed: ["2 Skill Points", "Hookshot", "10 Gold", "10 Scraps"]
+        }
+    },
+    "Le Oat Brothers": {
+        guaranteed: ["5 Gold"],
+        cursedLoot: {
+            guaranteed: ["10 Gold"],
+            nonGuaranteed: [
+                { item: "Unlimited Bacon", chance: 0.1 }
+            ]
+        }
+    }
+};
+
+// Generate monster loot with optional Cursed Medal Mode
 function generateMonsterLoot(monsterName) {
     const lootTable = monsterLootTables[monsterName];
     const monsterLootResult = document.getElementById('monsterLootResult');
@@ -147,16 +183,19 @@ function generateMonsterLoot(monsterName) {
         return;
     }
 
-    // Generate guaranteed loot
-    lootTable.guaranteed.forEach(item => {
+    const isCursed = document.getElementById('cursedMedal').checked;
+    const selectedLoot = isCursed && lootTable.cursedLoot ? lootTable.cursedLoot : lootTable;
+
+    // Display guaranteed loot
+    selectedLoot.guaranteed.forEach(item => {
         const div = document.createElement('div');
         div.className = 'lootItem';
         div.textContent = item;
         monsterLootResult.appendChild(div);
     });
 
-    // Generate non-guaranteed loot based on chance
-    lootTable.nonGuaranteed.forEach(drop => {
+    // Display non-guaranteed loot with chances
+    (selectedLoot.nonGuaranteed || []).forEach(drop => {
         if (Math.random() < drop.chance) {
             const div = document.createElement('div');
             div.className = 'lootItem';
@@ -164,40 +203,17 @@ function generateMonsterLoot(monsterName) {
             monsterLootResult.appendChild(div);
         }
     });
-
-    // If Cursed Medal Mode is checked, add cursed loot
-    if (document.getElementById('cursedMedal').checked) {
-        addCursedLoot(lootTable.cursedLoot);
-    }
 }
 
-// Add cursed loot to the result if Cursed Medal Mode is enabled
-function addCursedLoot(cursedLoot) {
-    const monsterLootResult = document.getElementById('monsterLootResult');
-
-    // Add guaranteed cursed items
-    cursedLoot.guaranteed.forEach(item => {
-        const div = document.createElement('div');
-        div.className = 'lootItem cursedItem';
-        div.textContent = item;
-        monsterLootResult.appendChild(div);
-    });
-
-    // Add non-guaranteed cursed loot with chance
-    cursedLoot.nonGuaranteed.forEach(drop => {
-        if (Math.random() < drop.chance) {
-            const div = document.createElement('div');
-            div.className = 'lootItem cursedItem';
-            div.textContent = drop.item;
-            monsterLootResult.appendChild(div);
+// Toggle the Cursed Medal Mode and regenerate loot
+function toggleCursedMode() {
+    // Check for currently selected monster and regenerate loot
+    const monsterButtons = document.querySelectorAll('button[onclick^="generateMonsterLoot"]');
+    monsterButtons.forEach(button => {
+        if (button.dataset.selected) {
+            generateMonsterLoot(button.innerText);
         }
     });
-}
-
-// Toggle the Cursed Medal Mode (updates loot display when changed)
-function toggleCursedMode() {
-    const selectedMonster = document.querySelector('button[onclick*="generateMonsterLoot"]').textContent;
-    generateMonsterLoot(selectedMonster); // Regenerate loot with or without cursed mode
 }
 </script>
 
