--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ const monsterLootTables = {
         }
     },
     "Monke": {
-        guaranteed: ["2 Skill Points", "Hookshot", "5 Gold", "10 Scraps"],
+        guaranteed: ["2 Skill Points", "5 Gold", "10 Scraps"],
         cursedLoot: {
             guaranteed: ["2 Skill Points", "10 Gold", "10 Scraps"]
         }
