--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Grimoire of Spoils</h1>
+            <h1>Loot Generator</h1>
         </div>
 
         <div class="section">
