--- a/index.html
+++ b/index.html
@@ -312,13 +312,13 @@
         "Golden Bokoblin": {
             guaranteed: ["15 Gold", "6 Scraps", "1-2 Rare Scraps", "2-3 Bokoblin Horns"],
             cursedLoot: {
-                guaranteed: ["30 Gold", "6 Scraps", "5 Bokoblin Horns"],
+                guaranteed: ["30 Gold", "6 Scraps", "2 Rare Scraps", "5 Bokoblin Horns"],
             }
         },
         "Boss Silver Bokoblin": {
             guaranteed: ["1 Skill Point", "5 Gold", "4 Bokoblin Horns", "5 Scraps", "2-3 Rare Scraps", "1 Large Bokoblin Horn"],
             cursedLoot: {
-                guaranteed: ["10 Gold", "8 Bokoblin Horns", "2 Large Bokoblin Horns"],
+                guaranteed: ["1 Skill Point", "10 Gold", "8 Bokoblin Horns", "5 Scraps", "3 Rare Scraps", "2 Large Bokoblin Horns"],
             }
         },
         "Chuchu": {
@@ -328,9 +328,9 @@
             }
         },
         "Boss Chuchu": {
-            guaranteed: ["8 Rupees", "3 Scraps", "1 Rare Scrap", "3 Chuchu Jelly"],
+            guaranteed: ["1 Skill Point", "8 Rupees", "3 Scraps", "1 Rare Scrap", "3 Chuchu Jelly"],
             cursedLoot: {
-                guaranteed: ["16 Rupees", "6 Chuchu Jelly"]
+                guaranteed: ["1 Skill Point", "16 Rupees", "3 Scraps", "1 Rare Scrap", "6 Chuchu Jelly"]
             }
         },
         "Monke": {
