--- a/index.html
+++ b/index.html
@@ -283,13 +283,14 @@
                       { item: "1 Carrot Seed", chance: 0.35 },
                       { item: "2 Carrot Seeds", chance: 0.1 },
                       { item: "1 Extra Carrot", chance: 0.15 },
-                      { item: "24-Carrot Gold", chance: 0.02 }
+                      { item: "24-Carrot Gold", chance: 0.01 }
                   ]
               },
               "Potato": {
                   guaranteed: ["1 Potato"],
                   extras: [
                       { item: "1 Potato Seed", chance: 0.35 },
+                      { item: "1 Poisonous Potato", chance: 0.2 },
                       { item: "2 Potato Seeds", chance: 0.15 },
                       { item: "1 Extra Potato", chance: 0.2 },
                       { item: "Bro-tato", chance: 0.04 }
